[project]
name = "tileorm"
version = "0.1.3"
description = "An ORM for Tile38 inspired by Peewee - with Pydantic validation"
authors = [{ name = "Alex Ward", email = "alxwrd@googlemail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyle38~=0.14.2",
    "pydantic~=2.10.5",
    "pygeohash~=3.2.2",
]

[dependency-groups]
dev = [
    "ruff~=0.7.1",
    "isort~=5.13.2",
    "pytest~=8.3.3",
    "pytest-cov~=6.0.0",
    "pytest-asyncio~=0.24.0",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build~=0.10.0"]
build-backend = "uv_build"
